packages/ui-library/src/css/inputs.scss
/* ... */
.readonly {
    &.input-text,
    &.input-textarea {
        input[type=text],
        input[type=password],
        textarea {
            cursor: text;
            background: $color-white;
            border-color: $color-timberwolf;

            &:hover,
            &:focus {
                border-color: $color-rabbit-fur;
            }
        }
        textarea {
            resize: none !important;
        }
    }
    &.required {
        &.input-text {
            input[type=text],
            input[type=password] {
                padding-left: 15px;
            }
        }
        &.input-textarea {
            textarea {
                padding-left: 15px;
            }
        }
        &.input-text,
        &.input-textarea,
        &.input-toggle,
        &.input-select > div,
        &.legend {
            &:before {
                content: none;
            }
        }
        &.input-select {
            select {
                padding: 0 30px 0 10px;
            }
        }
        &.input-toggle {
            margin: 0;
        }
    }
}

// password requirements indicators
.validation-messages {
    padding: 10px 0;
    display: none;
    &.show {
        display: block;
    }
    .message {
        padding: 3px 0;
    }
    .icon-fail,
    .icon-success {
        margin-right: 5px;
        padding: 3px;
        display: inline-block;
        font-size: 6px;
        height: 7px;
        width: 7px;
        line-height: 1em;
        text-align: center;
        vertical-align: text-top;
        @include border-radius(6px);
    }
    .icon-fail {
        color: $color-white;
        background-color: $color-critical-red;
        font-weight: 600;
        &:before {
            content: "X";
        }
    }
    .icon-success {
        color: $color-white;
        background-color: $color-success;
    }
}


// MISC SUPPORTING STYLES --------------------------------------------------------------------------

.input-row {
    position: relative;
    margin: 0 0 25px;

    .input-text,
    .input-textarea,
    .input-select,
    .input-file-upload,
    .input-integer,
    .input-radio,
    .input-checkbox,
    .input-color-picker {
        margin-bottom: 0;
    }

    .row-selector {
        margin-bottom: 50px;
    }
}

.checkbox-list {
    padding: 10px 5px 10px 0;
    margin-left: 0;
    border: 1px solid $color-elderly;

    .filters {
        margin: 0 0 0 10px;
    }
    .options {
        width: 99%;
        max-height: 133px;
        overflow-y: auto;
        padding-left: 10px;

        label.input-checkbox {
            width: 190px;
            margin-bottom: 10px;
            text-transform: none;
            display: inline-block;
            padding: 0 0 0 30px;

            .label-text {
                display: inline-block;
                padding-top: 6px;
                margin: 0;
            }
        }
        &.item-head {
            display: block;
            color: $color-walrus;
        }
    }
    .actions {
        display: inline-block;
        margin: 12px 0 0;
        font-size: 14px;

        .toggle-container {
            display: inline-block;
            margin: 0 0 0 20px;

            .input-toggle {
                margin: 0 0 0 10px;
            }
        }
    }
}

.input-datetime {
    .input-time {
        margin-right: 0;
        margin-left: 3px;
    }
}

.input-textselect {
    display: inline-block;

    // UnitInput Component
    &.unit-input {
        .input-custom-select {
            padding-top: 0;
            padding-bottom: 0;
        }
        .input-text {
            input[type=text] {
                &.selected-option-label {
                    text-align: left;
                    border-color: transparent;
                }
            }
        }
        &.reversed {
            .input-text {
                input[type=text] {
                    border-color: $color-dolphin;
                    background-color: $color-white;
                }
            }
            > .input-text {
                input[type=text] {
                    border-width: 1px 0 1px 1px;
                }
            }
            > .input-custom-select {
                border-color: $color-dolphin;

                input[type=text] {
                    border-width: 1px 1px 1px 0;
                }
            }
        }
    }

    .input-container .input-select {
        margin: 0 0 0 -2px;
        vertical-align: middle;
        display: inline-block;

        .wrapper {
            @include border-radius(0 $default-input-border-radius $default-input-border-radius 0);
        }
    }

    > .input-custom-select {
        padding: 0;
        border-left: 1px solid transparent;

        .input-text {
            input[type=text] {
                width: 100%;
                text-align: left;
                @include border-radius(0 $default-input-border-radius $default-input-border-radius 0);
            }
        }
    }

    > .input-text {
        margin: 0 !important;

        input[type=text] {
            text-align: right;
            vertical-align: middle;
            display: inline-block;

            @include border-radius($default-input-border-radius 0 0 $default-input-border-radius);
        }

        &.form-error {
            input[type=text] {
                @include border-radius($default-input-border-radius 0 0 $default-input-border-radius);
            }
            .input-container {
            	padding-right: 0;
            }
        }

        .form-error-icon {
            right: -21px;
        }
        .form-error-message {
            right: 1px;
        }
    }
}

.input-selectionfilter {
    display: inline-block;
    margin: 0 15px 20px 0;
}

a {
    &.input-link {
        display: block;
        margin: 2px 0 0 1px;
    }
}
/* ... */

